@@ -110,7 +110,7 @@ private:
   static bool select_func(const Glib::RefPtr<Gtk::TreeModel>& model, const Gtk::TreePath& path,
                           bool currently_selected);
 
-  int  find_recursively(const std::string& dirname, FindData& find_data);
+  void find_recursively(const std::string& dirname, FindData& find_data);
   bool find_check_file(const std::string& basename, const std::string& fullname, FindData& find_data);
   void find_fill_dirstack(FindData& find_data);
   void find_increment_file_count(FindData& find_data, int file_count);
